<resources>
    <string name="app_name">Migo</string>

    <string name="network_status_title">Network Status:</string>
    <string name="network_status_message">Network Message:</string>
    <string name="network_status_disconnect">Network is not available</string>
    <string name="network_status_connecting">Network is connecting</string>
    <string name="network_status_waiting">Waiting</string>
    <string name="menu_test">Test API</string>

    <string name="tab_store">Store</string>
    <string name="tab_wallet">Wallet</string>

    <string name="empty_wallet">Empty Wallet</string>
    <string name="buy">BUY</string>
    <string name="purchase">Purchase</string>
    <string name="activate">ACTIVATE</string>
    <string name="activated">ACTIVATED</string>
    <string name="expire">EXPIRE</string>

    <string name="pass_status">Status:</string>
    <string name="pass_purchase_date">Purchase Date:</string>
    <string name="pass_activated_date">Activated Date:</string>
    <string name="pass_expire_date">Expire Date:</string>
    <string name="ok">OK</string>

</resources>