<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_pass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1 Day Pass" />

    <TextView
        android:id="@+id/tv_pass_status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/pass_status"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass_title" />

    <TextView
        android:id="@+id/tv_pass_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/tv_pass_status_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass_title"
        tools:text="Activate" />

    <TextView
        android:id="@+id/tv_pass_activate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pass_purchase_date"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass_status_title" />

    <TextView
        android:id="@+id/tv_pass_activate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/tv_pass_activate_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass_status_title"
        tools:text="2021/07/11" />

    <TextView
        android:id="@+id/tv_pass_activated_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pass_activated_date"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass_activate_title" />

    <TextView
        android:id="@+id/tv_pass_activated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/tv_pass_activated_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass_activate_title"
        tools:text="2021/07/12" />

    <TextView
        android:id="@+id/tv_pass_expire_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pass_expire_date"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass_activated_title" />

    <TextView
        android:id="@+id/tv_pass_expire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/tv_pass_expire_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass_activated_title"
        tools:text="2021/07/13" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass_expire_title" />

</androidx.constraintlayout.widget.ConstraintLayout>